build/log/idf_py_stderr_output_844428
Command: make -j 14 all
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/ledconf.c:71:19: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'led_state'
   71 | uint8_t IRAM_ATTR led_state(void)
      |                   ^~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/ledconf.c:3:16: warning: 'state' defined but not used [-Wunused-variable]
    3 | static uint8_t state = 0x01;
      |                ^~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:154: esp-idf/main/CMakeFiles/__idf_main.dir/dvr/ledconf.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
